# gaussian_rasterizer

./: .gitignore  CMakeLists.txt  main.cpp  main.py  rasterize_points.cu  rasterize_points.h  setup.py
cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
diff_gaussian_rasterization_depth/: __init__.py
diff_gaussian_rasterization_w_pose_depth/: __init__.py
gaussian_rasterizer/: __init__.py
